--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <!-- Font for better typography -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
     <!-- Favicon (optional) -->
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="https://img.icons8.com/?size=100&id=CFNidlg75GOA&format=png&color=000000" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
